Update font color
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/static/assets/sass/base/utilities/_initial-variable.scss
+++ b/static/assets/sass/base/utilities/_initial-variable.scss
@@ -1,7 +1,8 @@
 //  color variable
 $ac-primary: #1971bd;
 
-$ac-color-text: #3b3030;
+// $ac-color-text: #3b3030;
+$ac-color-text: #607080;
 $ac-color-label: #a6abbd;
 $ac-color-link: #4a4a4a;
 $ac-color-value: #393939;
