--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -318,7 +318,7 @@ a.inline-button {
       font-size: 16px;
       line-height: 160%;
 
-      color: #000000;
+      color: $ac-color-text;
     }
   }
 }
