--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -10,9 +10,21 @@
 
   &.author-page {
     min-height: auto;
+    .blog-title-content {
+      &:hover {
+        h1 {
+          text-decoration: none;
+        }
+      }
+    }
   }
 
   .blog-title-content {
+    &:hover {
+      h1 {
+        text-decoration: underline;
+      }
+    }
     h1 {
       line-height: 130%;
       font-style: normal;
@@ -26,10 +38,6 @@
       a {
         color: $ac-white;
         font-family: "Roboto Mono", monospace;
-
-        &:hover {
-          text-decoration: underline;
-        }
       }
     }
 
@@ -48,6 +56,9 @@
       font-size: 13px;
       height: 48px;
       font-family: "Roboto Mono", monospace;
+      &:hover {
+        border: 1px solid $ac-white-light;
+      }
     }
   }
 
@@ -86,7 +97,6 @@
   .icon-square {
     width: 20px;
     height: 20px;
-    background: $ac-primary;
     margin-right: 16px;
     display: block;
   }
@@ -96,6 +106,15 @@
 .recent-blog-posts {
   background-color: #f2f5f7;
   padding: 60px 0 70px;
+  .button.is-mini {
+    border: 1px solid $ac-white-light !important;
+    transition: 0.3s ease-in-out;
+    color: $ac-color-heading;
+    &:hover {
+      border: $ac-primary;
+      color: $ac-white;
+    }
+  }
 }
 
 .author {
@@ -128,7 +147,7 @@
       font-weight: 400;
       font-size: 13px;
       line-height: 160%;
-      color: #ffffff;
+      color: #dddddd;
       margin-bottom: 8px;
     }
 
