--- a/static/assets/sass/main.css
+++ b/static/assets/sass/main.css
@@ -11118,6 +11118,12 @@ ul.social-share-button li a i.fa {
   .hero-area-blog .single-blog-carousel .blog-title-content .social-share {
     margin-top: 20px;
   }
+  .section-title-small {
+    letter-spacing: 0;
+  }
+  .section-title-small .icon-square {
+    display: none;
+  }
   .recent-blog-posts {
     padding: 30px 0;
   }
