Fix typography issues for list items
Signed-off-by: Md Mohin Uddin <mohin@appscode.com>

--- a/static/assets/sass/layouts/_blog-details.scss
+++ b/static/assets/sass/layouts/_blog-details.scss
@@ -55,7 +55,7 @@
   p {
     // text-align: justify;
     font-size: 1.125rem;
-    margin-bottom: 20px;
+    margin-bottom: 1rem;
     line-height: 190%;
 
     a {
@@ -119,7 +119,6 @@
     li {
       font-size: 18px;
       list-style: disc;
-      margin-bottom: 15px;
       line-height: 190%;
 
       &:last-child {
@@ -143,7 +142,6 @@
 
     li {
       font-size: 18px;
-      margin-bottom: 15px;
       line-height: 190%;
 
       &:last-child {
