--- a/static/assets/sass/main.css
+++ b/static/assets/sass/main.css
@@ -11438,7 +11438,7 @@ ul.social-share-button li a i.fa {
 
 .blog-content p {
   font-size: 1.125rem;
-  margin-bottom: 20px;
+  margin-bottom: 1rem;
   line-height: 190%;
 }
 
@@ -11502,7 +11502,6 @@ ul.social-share-button li a i.fa {
 .blog-content ul li {
   font-size: 18px;
   list-style: disc;
-  margin-bottom: 15px;
   line-height: 190%;
 }
 
@@ -11526,7 +11525,6 @@ ul.social-share-button li a i.fa {
 
 .blog-content ol li {
   font-size: 18px;
-  margin-bottom: 15px;
   line-height: 190%;
 }
 
