--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -119,7 +119,8 @@
           <div class="navbar-left">
             <div class="navbar-brand">
               <a href="{{.Site.Params.domain_bytebuilders}}">
-                <img src="{{ .Site.Data.products.bytebuilders.logo.src }}" alt="img" height="30" width="auto" loading="lazy"
+                <img src="{{ .Site.Data.products.bytebuilders.logoByAppsCode.white.src }}" alt="img" height="50" width="auto"
+                  loading="lazy"
                   decoding="async" loading="lazy" decoding="async" />
               </a>
               <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false">
