Fix responsive issue for m1 13inch
Signed-off-by: mohin7 <csemohin@gmail.com>

--- a/static/assets/sass/layouts/_author.scss
+++ b/static/assets/sass/layouts/_author.scss
@@ -75,7 +75,7 @@
 
   .author-page {
     .single-blog-card {
-      min-height: auto;
+      min-height: 170px;
       padding: 24px 16px;
     }
   }
