--- a/static/assets/sass/layouts/_blog-page.scss
+++ b/static/assets/sass/layouts/_blog-page.scss
@@ -20,6 +20,10 @@
     }
   }
 
+  &.blog-details-page {
+    padding: 120px 0 30px;
+  }
+
   .blog-title-content {
     &:hover {
       h1 {
@@ -34,7 +38,7 @@
       font-size: 40px;
       margin-bottom: 20px;
       letter-spacing: 0;
-      color: $ac-white;
+      color: #f1f2f3;
       font-family: "Roboto Mono", monospace;
 
       a {
@@ -1185,11 +1189,13 @@ ul.social-share-button {
   .single-blog-card {
     padding: 16px;
   }
+
   .recent-blog-posts {
     .single-blog-card {
       min-height: 155px;
     }
   }
+
   .search-filter-area {
     .filter-wrapper {
       padding: 0px 12px;
